// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/MenuButtons <Publish> matches the snapshot for an error 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
  <div
    class="photon-message-bar photon-message-bar-error"
  >
    Uh oh, something went wrong when publishing the profile.
    <button
      class="photon-button photon-button-micro"
      type="button"
    >
      Try again
    </button>
  </div>
  <div
    class="menuButtonsPublishError"
  >
    This is a mock error
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the closed state 1`] = `
<div>
  <div
    class="buttonWithPanel menuButtonsMetaInfoButton"
  >
    <div
      class="buttonWithPanelButtonWrapper"
    >
      <input
        class="buttonWithPanelButton menuButtonsMetaInfoButtonButton"
        type="button"
        value="Firefox () "
      />
    </div>
    <div
      class="arrowPanelAnchor"
    >
      <div
        class="arrowPanel arrowPanelOpenMetaInfo"
      >
        <div
          class="arrowPanelArrow"
        />
      </div>
    </div>
  </div>
  <div
    class="menuButtons"
  >
    <div
      class="buttonWithPanel menuButtonsShareButton menuButtonsShareButtonOriginal"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton"
          type="button"
          value="Publish…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel menuButtonsPublishPanel"
        >
          <div
            class="arrowPanelArrow"
          />
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs
      <i
        class="open-in-new"
      />
    </a>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the opened panel for a nightly profile 1`] = `
<div
  data-testid="MenuButtonsPublish-container"
>
  <form
    class="menuButtonsPublishContent"
  >
    <div
      class="menuButtonsPublishIcon"
    />
    <h1
      class="menuButtonsPublishTitle"
    >
      Share Performance Profile
    </h1>
    <p
      class="menuButtonsPublishInfoDescription"
    >
      Upload your profile and make it accessible to anyone with the link.
       This profile is from Firefox Nightly, so by default all information is included.
    </p>
    <h3>
      Include additional data that may be identifiable
    </h3>
    <div
      class="menuButtonsPublishDataChoices"
    >
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeHiddenThreads"
          type="checkbox"
        />
        Include hidden threads
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeFullTimeRange"
          type="checkbox"
        />
        Include hidden time range
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeScreenshots"
          type="checkbox"
        />
        Include screenshots
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeUrls"
          type="checkbox"
        />
        Include resource URLs
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeExtension"
          type="checkbox"
        />
        Include extension information
      </label>
    </div>
    <div
      class="menuButtonsPublishButtons"
    >
      <button
        class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
        type="button"
      >
        Compressing…
      </button>
      <button
        class="photon-button photon-button-primary menuButtonsPublishButton menuButtonsPublishButtonsUpload"
        type="submit"
      >
        <span
          class="menuButtonsPublishButtonsSvg menuButtonsPublishButtonsSvgUpload"
        />
        Publish
      </button>
    </div>
  </form>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the opened panel for a release profile 1`] = `
<div
  data-testid="MenuButtonsPublish-container"
>
  <form
    class="menuButtonsPublishContent"
  >
    <div
      class="menuButtonsPublishIcon"
    />
    <h1
      class="menuButtonsPublishTitle"
    >
      Share Performance Profile
    </h1>
    <p
      class="menuButtonsPublishInfoDescription"
    >
      Upload your profile and make it accessible to anyone with the link.
       By default, your personal data is removed.
    </p>
    <h3>
      Include additional data that may be identifiable
    </h3>
    <div
      class="menuButtonsPublishDataChoices"
    >
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeHiddenThreads"
          type="checkbox"
        />
        Include hidden threads
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeFullTimeRange"
          type="checkbox"
        />
        Include hidden time range
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeScreenshots"
          type="checkbox"
        />
        Include screenshots
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeUrls"
          type="checkbox"
        />
        Include resource URLs
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeExtension"
          type="checkbox"
        />
        Include extension information
      </label>
    </div>
    <div
      class="menuButtonsPublishButtons"
    >
      <button
        class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
        type="button"
      >
        Compressing…
      </button>
      <button
        class="photon-button photon-button-primary menuButtonsPublishButton menuButtonsPublishButtonsUpload"
        type="submit"
      >
        <span
          class="menuButtonsPublishButtonsSvg menuButtonsPublishButtonsSvgUpload"
        />
        Publish
      </button>
    </div>
  </form>
</div>
`;
